--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,4 @@
 <resources>
 	<string name="app_name">Quasar</string>
-	<string name="screen_filter">Screen Filter</string>
-	<string name="screen_border">Screen Border</string>
-	<string name="screen_filter_desc">Would You Like To Add A Screen Filter To Protect Your Eyes?</string>
-	<string name="screen_border_desc">Would You Like A Slick Round Border Around Your Screen?</string>
+	<string name="accessibility_desc">This is used to automatically disable and enable the overlay appropriately.</string>
 </resources>
